# my_actix_template

./: Cargo.toml  README.md  data.sqlite  tailwind.config.js
database_macros/: Cargo.toml
database_macros/src/: lib.rs
database_macros/tests/: integration_test.rs  libsql.rs
pages/: base.html
server/: Cargo.toml
server/src/: main.rs  models.rs
src/: database.rs  main.rs
