[package]
name = "server"
version = "0.1.0"
authors = ["Camilo <camilomcatasus@gmail.com>"]
license = "Apache-2.0"
edition = "2021"


[[bin]]
name = "server"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = {version = "1.0.162", features = ["derive"]}
bcrypt = "0.14.0"
tokio = "1.28.1"
actix-files = "0.6.2"
database_macros = { git = "https://github.com/camilomcatasus/sqlite_helper.git" }
minijinja = {version = "1.0.5", features = ["loader"]}
rusqlite = { version = "0.29.0", features = ["bundled"] }
anyhow = "1.0.75"
bb8 = "0.8.2"
shuttle-actix-web = "0.37.0"

