[package]
name = "server"
version = "0.1.0"
authors = ["Camilo <camilomcatasus@gmail.com>"]
license = "Apache-2.0"
edition = "2021"


[[bin]]
name = "server"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = {version = "1.0.162", features = ["derive"]}
bcrypt = "0.14.0"
tokio = "1.28.1"
actix-files = "0.6.2"
minijinja = {version = "1.0.5", features = ["loader"]}
rusqlite = "0.29.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
